# I-language-rust

./: .editorconfig  .gitattributes  .gitignore  .gitlint  .gitmodules  .mega-linter.yml  .pre-commit-config.yaml  .readthedocs.yaml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  dev-requirements.txt  doc-requirements.txt  justfile  mkdocs.yml
.devcontainer/: devcontainer.json
.docs/: .mkdocs.yml  .readthedocs.yaml
.docs/.docs/.dev/: lib.rs.md
.docs/.docs/.dev/.compiler/: compiler.rs.md  mod.rs.md
.docs/.docs/.dev/.installer/.Windows/: associate_file_extension.bat.md
.docs/.docs/.dev/.lexer/: mod.rs.md
.docs/.docs/.dev/.parser/: parser.rs.md
.docs/extra/CSS/: admonition_license.css
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  SUPPORT.md  auto_assign.yml  cliff.toml  dependabot.yml  issue-branch.yml  labeler.yml  mergify.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  enhancement.md  feature_request.md
.github/workflows/: clean.yml  codeql.yml  dependencies.yml  deploy_site.yml  label.yml  megalinter.yml  release.yml  rust.yml  rust_sec.yml  submodules.yml
.modules/: math.il
.tools/: generate_dev_docs.py
.translations/.installer/: german.islu
Docs/: .mkdocs.yml  .readthedocs.yaml  .requirements.txt  CHANGELOG.md  CONTRIBUTING.md  about.md  acknowledgements.md  extra.css  index.md  install.md  mkdocs.yml  requirements.txt
Docs/Docs/: CHANGELOG.md  CONTRIBUTING.md  acknowledgements.md  book.md  index.md  install.md
Docs/Docs/Dev/: index.md
Docs/Docs/Dev/Grammar/: fileextensions.md  mod.rs.md
Docs/Docs/Dev/Installer/Linux/: installer.bash.md
Docs/Docs/Dev/Installer/Windows/: add_desktop_icon.bat.md  setup.iss.md
Docs/Docs/Dev/Installer/Windows/Server/: installer.bat.md
Docs/Docs/Dev/Lexer/: lexer.rs.md
Docs/Docs/Dev/Parser/: mod.rs.md
Docs/extra/JS/: tablesort.js
Docs/overrides/: 404.html  main.html
Tools/: clean.py  generate_dev_docs.py  get_release_version.py  replace_variables.py
Tools/Docs/: replace_variables.py
Translations/: de.json  en.json
Translations/Installer/: default.isl  german.isl
crates/compiler/: Cargo.toml
crates/compiler/src/: lexer.rs  parser.rs
crates/lexer/: Cargo.toml
crates/lexer/examples/: hello_world.rs  one_plus_one.rs  read_from_file.rs
crates/lexer/src/: error.rs  lex.rs  lib.rs
crates/lexer/src/tokens/: constant.rs  keyword.rs  mark.rs  mod.rs  token.rs
crates/lexer/tests/: lex.rs  lib.rs
crates/lexer/tests/tokens/: constant.rs  keyword.rs  mark.rs  mod.rs  token.rs
crates/tools/: Cargo.toml
crates/tools/src/: beta.rs  build.rs  error.rs  iterator.rs  lib.rs  logging.rs  panic_handler.rs  terminal.rs  translation.rs
docs/: .mkdocs.yml  .readthedocs.yaml
docs/docs/: CHANGELOG.md  about.md  book.md  index.md
docs/docs/dev/: main.rs.md
docs/docs/dev/grammar/: grammar.pest.md  grammar.rs.md
docs/docs/dev/installer/windows/: add_to_path.bat.md  unassociate_file_extension.bat.md
docs/extra/CSS/: round_button.css  round_logo.css
examples/: guess_the_number.il
src/: build.rs  lib.rs  main.rs
src/.installer/.windows/: add_desktop_icon.bat  setup.iss
src/Grammar/: grammar.pest  mod.rs
src/Grammar-and-specifications/: fileextensions
src/Installer/: associate_file_extension.bat  setup.iss  unasociate_file_extension.bat
src/Installer/Linux/: install.bash  installer.bash
src/Installer/Windows/: add_desktop_icon.bat  add_to_path.bat  associate_file_extension.bat  setup.iss  unasociate_file_extension.bat
src/Installer/Windows/Server/: installer.bat
src/Lexer/: lexer.rs  mod.rs
src/Parser/: convert.rs  errors.rs  mod.rs  parser.rs  token.rs
src/__old_parser/: Cargo.toml
src/compiler/: mod.rs
src/grammar/: fileextensions  grammar.pest  grammar_beta.pest
src/grammar_/: grammar.pest
src/installer/Linux/: installer.bash
src/installer/Windows/: setup.iss
src/installer/linux/: installer.bash
src/installer/windows/: setup.iss
src/installer/windows/server/: installer.bat
src/installer_/Windows/: add_to_path.bat
src/lexer/: Cargo.toml
src/lexer/src/: lex.rs  lib.rs  main.rs
src/lexer/src/tokens/: constant.rs  keyword.rs  mark.rs  mod.rs  token.rs
src/lexer/tests/tokens/: mod.rs
src/parser/: convert.rs  errors.rs  mod.rs  parser.rs  token.rs
src/parser_/: errors.rs
src/tools/: Cargo.toml
src/tools/src/: error.rs  iterator.rs  lib.rs  panic_handler.rs  translation.rs
