# Note:
# All edits to this file, for example rust version updates, should be committed only on a new release.

[package]
name = "I-Language"
description = "The I programming language is a high level programming language written in rust."
version = "1.0.0-alpha4"
authors = [
	"ElBe-Plaq <elbe.dev.plaq@gmail.com>",
	"MasterOktagon",
	"Ranastra"
]
edition = "2021"
rust-version = "1.69"
documentation = "https://i-language.readthedocs.io/"
readme = ".github/README.md"
homepage = "https://i-language-development.github.io/"
repository = "https://github.com/I-Language-Development/I-language-rust/"
license-file = "LICENSE.txt"
keywords = ["i", "i-language", "programming-language", "language", "compiler"]
categories = [
	"compilers",
	"development-tools",
]

[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.69"
homepage = "https://i-language-development.github.io/"
repository = "https://github.com/I-Language-Development/I-language-rust/"
license-file = "LICENSE.txt"
keywords = ["i", "i-language", "programming-language", "language"]
publish = false

[workspace.dependencies]
localizer-rs = "1.2.0"
log = "0.4.20"

[workspace.lints.rust]
non_snake_case = "allow"

[dependencies]
clap = { version = "4.4.11", features = ["derive", "wrap_help"], optional = true }
clap-verbosity-flag = { version = "2.1.1", optional = true }
log = { version = "0.4.20", optional = true }

compiler = { path = "crates/compiler" }
grammar = { path = "crates/grammar" }
lexer = { path = "crates/lexer" }
parser = { path = "crates/parser" }
tools = { path = "crates/tools" }

[dev-dependencies]
cargo-audit = "0.18.3"
just = "1.14.0"

[build-dependencies]
version_check = "0.9.4"

[features]
beta = []
cli = ["dep:clap", "dep:clap-verbosity-flag", "dep:log"]
localization = []

[[bin]]
name = "icomp"  # icomp = I Compiler
path = "src/main.rs"
required-features = ["cli"]
