# Note:
# All edits to this file, for example rust version updates, should be committed only on a new release.

# Uncomment line 47, 72 and 73 if you want to check for missing documentation.

[package]
name = "I-Language"
description = "The I programming language is a high level programming language written in rust."
version = "1.0.0-alpha4"
authors = [
	"ElBe-Plaq <elbe.dev.plaq@gmail.com>",
	"MasterOktagon",
	"Ranastra"
]
edition = "2021"
rust-version = "1.69"
documentation = "https://i-language.readthedocs.io/"
readme = ".github/README.md"
homepage = "https://i-language-development.github.io/"
repository = "https://github.com/I-Language-Development/I-language-rust/"
license-file = "LICENSE.txt"
keywords = ["i", "i-language", "programming-language", "language", "compiler"]
categories = [
	"compilers",
	"development-tools",
]

[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.69"
homepage = "https://i-language-development.github.io/"
repository = "https://github.com/I-Language-Development/I-language-rust/"
license-file = "LICENSE.txt"
keywords = ["i", "i-language", "programming-language", "language"]
publish = false

[workspace.dependencies]
annotate-snippets = "0.10.0"
log = "0.4.20"

tools = { path = "crates/tools" }

[workspace.lints.rust]
# missing_docs = "warn"
non_snake_case = "allow"
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = "warn"
restriction = "warn"

# Explicit allows
absolute_paths = "allow"
arithmetic_side_effects = "allow"
blanket_clippy_restriction_lints = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
expect_used = "allow"
implicit_return = "allow"
inline_always = "allow"
missing_trait_methods = "allow"
mod_module_files = "allow"
must_use_candidate = "allow"
print_stderr = "allow"
print_stdout = "allow"
redundant_type_annotations = "allow"
std_instead_of_core = "allow" # Doesn't work until rust-lang/cargo/12918 is fixed

# [workspace.lints.rustdoc]
# missing_crate_level_docs = "warn"

[dependencies]
# annotate-snippets = { version = "0.10.0", optional = true }
clap = { version = "4.4.11", features = ["derive", "wrap_help"], optional = true }
clap-verbosity-flag = { version = "2.1.1", optional = true }
localizer-rs = { version = "1.2.0", optional = true }
log = { version = "0.4.20", optional = true }

compiler = { path = "crates/compiler" }
grammar = { path = "crates/grammar" }
lexer = { path = "crates/lexer" }
parser = { path = "crates/parser" }
tools = { path = "crates/tools" }

[dev-dependencies]
cargo-audit = "0.18.3"
just = "1.14.0"

[features]
beta = []
cli = ["dep:clap", "dep:clap-verbosity-flag", "dep:log", "tools/cli"]
localization = [
	"dep:localizer-rs",
	# "compiler/localization",
	# "grammar/localization",
	# "lexer/localization",
	# "parser/localization",
	"tools/localization"
]

# Default features
default = ["localization"]

[[bin]]
name = "icomp"  # icomp = I Compiler
path = "src/main.rs"
required-features = ["cli"]
