[package]
name = "tools"
description = "I-Language tools is a collection of tools used with the I-Programming-Language."
version = "1.1.0"
authors = [
	"ElBe-Plaq <elbe.dev.plaq@gmail.com>",
]

edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
chrono = "0.4.31"
clap-verbosity-flag = { version = "2.1.1", optional = true }
current_locale = { version = "0.1.1", optional = true }
env_logger = "0.10.1"
localizer-rs = { version = "1.2.0", optional = true }

log.workspace = true

[features]
cli = ["dep:clap-verbosity-flag"]
localization = ["dep:current_locale", "dep:localizer-rs"]

[lints]
workspace = true
