[package]
name = "tools"
description = "I-Language tools is a collection of tools used with the I-Programming-Language."
authors = [
	"ElBe-Plaq <elbe.dev.plaq@gmail.com>",
]
build = "./src/build.rs"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
chrono = "0.4.31"
clap-verbosity-flag = { version = "2.1.1", optional = true }
current_locale = { version = "0.1.1", optional = true }
env_logger = "0.10.1"
localizer-rs = { version = "1.2.0", optional = true }
sysinfo = "0.30.0"
log.workspace = true

[build-dependencies]
cargo_metadata = "0.18.1"
glob = "0.3.1"

[features]
beta = []
cli = ["dep:clap-verbosity-flag"]
localization = ["dep:current_locale", "dep:localizer-rs"]

[lints]
workspace = true
